env.func to record class