@@ -1,6 +1,7 @@
 package freshlyground.compiler.semantic;
 
 import java.util.Arrays;
+import java.util.List;
 
 public final class Builtins {
     private Builtins() {}
@@ -8,11 +9,18 @@ public final class Builtins {
     public static final class Symbols {
         private Symbols() {}
         public static Environment.Function PRINT;
+        public static Environment.Function INPUT;
         public static Environment.Function ANY_STRINGIFY;
         public static Environment.Function STRING_LENGTH;
         public static Environment.Function STRING_SLICE;
 
-        static void reset() { PRINT=null; ANY_STRINGIFY=null; STRING_LENGTH=null; STRING_SLICE=null; }
+        static void reset() {
+            PRINT         = null;
+            INPUT         = null;
+            ANY_STRINGIFY = null;
+            STRING_LENGTH = null;
+            STRING_SLICE  = null;
+        }
     }
 
     private static boolean INSTALLED = false;
@@ -28,18 +36,20 @@ public final class Builtins {
 
     private static void installGlobals(Scope scope) {
         Symbols.PRINT =
-            scope.defineFunction("print", Arrays.asList(Environment.Type.ANY), Environment.Type.NIL);
+            scope.defineFunction("print", List.of(Environment.Type.ANY), Environment.Type.NIL);
+        Symbols.INPUT =
+            scope.defineFunction("input", List.of(), Environment.Type.STRING);
     }
 
     private static void installTypeMembers() {
         Scope any = Environment.lookupType("Any").getScope();
         Symbols.ANY_STRINGIFY =
-            any.defineFunction("stringify", Arrays.asList(Environment.Type.ANY), Environment.Type.STRING);
+            any.defineFunction("stringify", List.of(Environment.Type.ANY), Environment.Type.STRING);
 
         Scope string = Environment.lookupType("String").getScope();
         Symbols.STRING_LENGTH =
-            string.defineFunction("length", Arrays.asList(Environment.Type.STRING), Environment.Type.INTEGER);
+            string.defineFunction("length", List.of(Environment.Type.STRING), Environment.Type.INTEGER);
         Symbols.STRING_SLICE =
-            string.defineFunction("slice", Arrays.asList(Environment.Type.STRING, Environment.Type.INTEGER, Environment.Type.INTEGER), Environment.Type.STRING);
+            string.defineFunction("slice", List.of(Environment.Type.STRING, Environment.Type.INTEGER, Environment.Type.INTEGER), Environment.Type.STRING);
     }
 }
